fixed turning on and off text box alignment

--- a/css/widgetInPage.css
+++ b/css/widgetInPage.css
@@ -1,7 +1,7 @@
 .snippetParseButton {
     background-repeat: no-repeat;
     background-size: 50%;
-    background-position: center;
+    
 }
 
 .widgetMenu {
